--- a/presentation-layer/src/containers/GameGuide/GameGuide.css
+++ b/presentation-layer/src/containers/GameGuide/GameGuide.css
@@ -25,12 +25,11 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    overflow: scroll;
+    overflow: auto;
     /* background-color: #000; */
     border-radius: 20px;
     box-shadow: 2px 2px 4px gray, -2px -2px 4px gray;
     /* padding:20px; */
-    line-height: 1.5;
 }
 
 .GameGuide__footer{
