--- a/presentation-layer/src/containers/GuessTaking/GuessTaking.css
+++ b/presentation-layer/src/containers/GuessTaking/GuessTaking.css
@@ -91,6 +91,7 @@
 } */
 
 
+/* ------------------------------ Sweet Alert customization styles ----------------------------------- */
 .swal-button:hover{
     background-color: #000 !important;
 }
@@ -132,6 +133,8 @@
     width:30%
 } */
 
+/* --------------------- Media Queries ---------------------------------------------------------- */
+
 @media screen and (min-width:480px) {
     .next-player-container{
         font-size: 1.3rem;
@@ -161,27 +164,3 @@
 }
 
 
-/* @media screen and (min-width:600px){
-    .action-buttons-wrapper{
-        position:absolute;
-        flex-direction: row;
-        height: 70px;
-        right:50%;
-        top:80%;
-        bottom:0;
-        transform: translateX(50%);   
-    }
-    
-}
-
-@media screen and (min-width:769px){
-    .Welcome__heading{
-        font-size: 8.0rem;
-    }
-}
-
-@media screen and (min-width:1024px){
-    .Welcome__heading{
-        font-size: 10rem;
-    }
-} */
