--- a/presentation-layer/src/containers/Welcome/Welcome.css
+++ b/presentation-layer/src/containers/Welcome/Welcome.css
@@ -51,6 +51,8 @@
     transform: translateY(-50%);    
 }
 
+/* -------------------Media Queries --------------------------------------- */
+
 @media screen and (min-width:320px) and (max-width:768px){
     
     .Welcome__heading{
@@ -85,25 +87,5 @@
         font-size: 10rem;
     }
 }
-/* 
-@media screen and (orientation: landscape) {
-    .Welcome__heading{
-      font-size: 3.5rem;
-        
-     
-    }
-  } */
-  
 
-/* @media screen and (orientation: landscape) {
-
-    .Welcome__container{
-          padding-top: 70px;
-        
-      }
-    .Welcome__heading{
-      font-size: 3.5rem;
-        
-    }
-  } */
   
